# seedbot

./: .gitignore  Cargo.toml  LICENSE  config.json.example  index.js  package.json  runchan.sh
src/: main.rs
