[package]
name = "seedbot"
version = "0.1.0"
authors = ["Jason Dagit <dagit@galois.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
debug = true

[dependencies]
irc = "0.13"
serde = "1.0"
serde_json = "1.0"
rand = "0.7"
tokio = "0.1"
failure = "0.1"
# We need this older reqwest to work around a bug with blocking
# http requests
reqwest = "=0.9.17"
regex = "1.3"
futures = "0.1"

[dependencies.serenity]
version = "0.7"
default-features = false
features = ["default_native_tls"]
