[package]
name = "seedbot"
version = "0.1.0"
authors = ["Jason Dagit <dagit@galois.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
debug = true

[dependencies]
irc = "0.14"
serde = "*"
serde_json = "*"
rand = "*"
failure = "*"
# We need this older reqwest to work around a bug with blocking
# http requests
reqwest = { version = "0.10", features = ["json"] }
#reqwest = "0.9"
regex = "*"
futures = "*"
srl_http = { git = "https://github.com/dagit/srl-http.git" }

[dependencies.tokio]
version = "*"
features = ["stream", "sync"]

[dependencies.serenity]
version = "*"
default-features = false
features = ["default_native_tls", "http", "standard_framework", "framework"]
